// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> BasicTable no border around table element 1`] = `
.c0 {
  border: none;
  border-collapse: separate;
  border-spacing: 0;
  color: #696361;
  font-size: inherit;
  overflow-x: scroll;
}

.c0 td {
  padding: 0.4rem 0.8rem;
  font-size: 1.6rem;
}

.c0 th {
  color: #7B746F;
  font-weight: 600;
  font-size: 1.4rem;
  border-bottom: 1px solid rgba(34,36,38,0.15);
  text-align: left;
  padding: 0.4rem 0.8rem;
}

.c0 td:not(:first-child),
.c0 th:not(:first-child) {
  border-left: 1px solid rgba(34,36,38,0.15);
}

.c0 tr:not(:first-child) td {
  border-top: 1px solid rgba(34,36,38,0.15);
}

<div>
  <table
    class="c0"
  >
    <caption>
      Basic Table
    </caption>
    <tbody
      class="TableBody-sc-257f50-0"
    >
      <tr
        class="TableRow-sc-1otpgt5-0"
      >
        <td
          class="TableCell-yj8482-0"
        >
          One col
        </td>
        <td
          class="TableCell-yj8482-0"
        >
          Two col
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<Table /> CompactTable smaller paddings and font size 1`] = `
.c0 {
  border: none;
  border-collapse: separate;
  border-spacing: 0;
  color: #696361;
  font-size: 1.4rem;
  overflow-x: scroll;
}

.c0 td {
  padding: .2rem .4rem;
  font-size: 1.6rem;
}

.c0 th {
  color: #7B746F;
  font-weight: 600;
  font-size: 1.4rem;
  border-bottom: 1px solid rgba(34,36,38,0.15);
  text-align: left;
  padding: 0.4rem 0.8rem;
}

.c0 td:not(:first-child),
.c0 th:not(:first-child) {
  border-left: none;
}

.c0 tr:not(:first-child) td {
  border-top: 1px solid rgba(34,36,38,0.15);
}

<div>
  <table
    class="c0"
  >
    <caption>
      Compact Table
    </caption>
    <tbody
      class="TableBody-sc-257f50-0"
    >
      <tr
        class="TableRow-sc-1otpgt5-0"
      >
        <td
          class="TableCell-yj8482-0"
        >
          One col
        </td>
        <td
          class="TableCell-yj8482-0"
        >
          Two col
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<Table /> DefaultTable gets rendered with border around table 1`] = `
.c0 {
  border: 1px solid rgba(34,36,38,0.15);
  border-collapse: separate;
  border-spacing: 0;
  color: #696361;
  font-size: inherit;
  overflow-x: scroll;
}

.c0 td {
  padding: 0.4rem 0.8rem;
  font-size: 1.6rem;
}

.c0 th {
  color: #7B746F;
  font-weight: 600;
  font-size: 1.4rem;
  border-bottom: 1px solid rgba(34,36,38,0.15);
  text-align: left;
  padding: 0.4rem 0.8rem;
}

.c0 td:not(:first-child),
.c0 th:not(:first-child) {
  border-left: 1px solid rgba(34,36,38,0.15);
}

.c0 tr:not(:first-child) td {
  border-top: 1px solid rgba(34,36,38,0.15);
}

<div>
  <table
    class="c0"
  >
    <caption>
      Default Table
    </caption>
    <tbody
      class="TableBody-sc-257f50-0"
    >
      <tr
        class="TableRow-sc-1otpgt5-0"
      >
        <td
          class="TableCell-yj8482-0"
        >
          One col
        </td>
        <td
          class="TableCell-yj8482-0"
        >
          Two col
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<Table /> Stetch table gets 100% width 1`] = `
.c0 {
  border: none;
  border-collapse: separate;
  border-spacing: 0;
  color: #696361;
  font-size: inherit;
  overflow-x: scroll;
  width: 100%;
}

.c0 td {
  padding: 0.4rem 0.8rem;
  font-size: 1.6rem;
}

.c0 th {
  color: #7B746F;
  font-weight: 600;
  font-size: 1.4rem;
  border-bottom: 1px solid rgba(34,36,38,0.15);
  text-align: left;
  padding: 0.4rem 0.8rem;
}

.c0 td:not(:first-child),
.c0 th:not(:first-child) {
  border-left: 1px solid rgba(34,36,38,0.15);
}

.c0 tr:not(:first-child) td {
  border-top: 1px solid rgba(34,36,38,0.15);
}

<div>
  <table
    class="c0"
  >
    <caption>
      Basic Table
    </caption>
    <tbody>
      <tr
        class="TableRow-sc-1otpgt5-0"
      >
        <td
          class="TableCell-yj8482-0"
        >
          One col
        </td>
        <td
          class="TableCell-yj8482-0"
        >
          Two col
        </td>
      </tr>
      <tr
        class="TableRow-sc-1otpgt5-0"
      >
        <td
          class="TableCell-yj8482-0"
        >
          One col
        </td>
        <td
          class="TableCell-yj8482-0"
        >
          Two col
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<Table /> StripedTable alternates background color on rows 1`] = `
.c0 {
  border: none;
  border-collapse: separate;
  border-spacing: 0;
  color: #696361;
  font-size: inherit;
  overflow-x: scroll;
}

.c0 td {
  padding: 0.4rem 0.8rem;
  font-size: 1.6rem;
}

.c0 th {
  color: #7B746F;
  font-weight: 600;
  font-size: 1.4rem;
  border-bottom: 1px solid rgba(34,36,38,0.15);
  text-align: left;
  padding: 0.4rem 0.8rem;
}

.c0 td:not(:first-child),
.c0 th:not(:first-child) {
  border-left: 1px solid rgba(34,36,38,0.15);
}

.c0 tr:not(:first-child) td {
  border-top: 1px solid rgba(34,36,38,0.15);
}

.c0 tr:nth-child(even) {
  background: #f9fafb;
}

<div>
  <table
    class="c0"
  >
    <caption>
      Basic Table
    </caption>
    <tbody>
      <tr
        class="TableRow-sc-1otpgt5-0"
      >
        <td
          class="TableCell-yj8482-0"
        >
          One col
        </td>
        <td
          class="TableCell-yj8482-0"
        >
          Two col
        </td>
      </tr>
      <tr
        class="TableRow-sc-1otpgt5-0"
      >
        <td
          class="TableCell-yj8482-0"
        >
          One col
        </td>
        <td
          class="TableCell-yj8482-0"
        >
          Two col
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
